--- a/README
+++ b/README
@@ -1,1 +1,4 @@
 This file codes are in preparation to build a system to pull data from MongoDB and display it onto a webpage Using Python, Django, Rest Framework.
+
+Ignore, mysite folder- was for earlier version. 
+The working model is TestInsurance folder.
